--- a/sustain-sphere/src/app/globals.css
+++ b/sustain-sphere/src/app/globals.css
@@ -3,25 +3,15 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+    --size: 1;
+    --background: #000;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+    background: var(--background);
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
 }
+
+/*<div class="h-72 bg-gradient-to-b from-purple-600 to-blue-600"></div>*/
+
