404page and Other pages

--- a/sustain-sphere/src/app/globals.css
+++ b/sustain-sphere/src/app/globals.css
@@ -12,5 +12,13 @@ body {
     color: white;
 }
 
+/*.bg-image {*/
+/*    background-image: url("/images/assets/vector_home_bottom.png");*/
+/*    background-position: bottom right;*/
+/*    background-size: contain; !* or background-size: contain; depending on your preference *!*/
+/*    background-repeat: no-repeat;*/
+/*}*/
+
+
 /*<div class="h-72 bg-gradient-to-b from-purple-600 to-blue-600"></div>*/
 
