--- a/sustain-sphere/src/app/components/BlogEditor/styles.css
+++ b/sustain-sphere/src/app/components/BlogEditor/styles.css
@@ -62,7 +62,7 @@ h1 {
 }
 
 .editor-input {
-    min-height: 350px;
+    min-height: 400px;
     resize: none;
     font-size: 15px;
     caret-color: rgb(5, 5, 5);
@@ -71,6 +71,13 @@ h1 {
     outline: 0;
     padding: 15px 10px;
     caret-color: #444;
+}
+
+.editor-toolbar-layout {
+    overflow-x:scroll;
+    background-color: #fff;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
 
 .editor-placeholder {
